# Tarea-Laleira

./: README.md
Trabajo-aptitud-Laleira-Digital/: dockerfile  pyproject.toml  request.py
Trabajo-aptitud-Laleira-Digital/app/: main.py
Trabajo-aptitud-Laleira-Digital/docs/source/: conf.py  index.rst
Trabajo-aptitud-Laleira-Digital/tests/: test_main.py
